RESOLVED FIXED245948
Fix !ENABLE(CONTEXT_MENUS) build after 255052@main
https://bugs.webkit.org/show_bug.cgi?id=245948
Summary Fix !ENABLE(CONTEXT_MENUS) build after 255052@main
Don Olmstead
Reported 2022-10-02 11:34:10 PDT
...
Attachments
Don Olmstead
Comment 1 2022-10-02 11:38:21 PDT
EWS
Comment 2 2022-10-02 16:07:11 PDT
Committed 255078@main (b017588f8835): <https://commits.webkit.org/255078@main> Reviewed commits have been landed. Closing PR #4913 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-02 16:08:18 PDT
Note You need to log in before you can comment on or make changes to this bug.