Fix !ENABLE(CONTEXT_MENUS) build after 255052@main https://bugs.webkit.org/show_bug.cgi?id=245948

Reviewed by Chris Dumez.

Reorganize the LocalizedStrings header so all functions in the
`ENABLE(CONTEXT_MENUS)` block are also guarded. Modify the source file
to use the same ordering for definitions.

Move `pdfDocumentTypeDescription` so it is no longer guarded by
`ENABLE(CONTEXT_MENUS).

* Source/WebCore/platform/LocalizedStrings.cpp:
* Source/WebCore/platform/LocalizedStrings.h:

Canonical link: https://commits.webkit.org/255078@main